--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,8 +5,8 @@
 
 </content>
         
-<script src="library/js/plugins.js"></script>
-<script src="library/js/main.js"></script>
+<script src="{{ site.url }}/library/js/plugins.js"></script>
+<script src="{{ site.url }}/library/js/main.js"></script>
 
 <!-- Google Analytics -->
 <script>
