--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 {% include header.html %}
 
 <section class="profile-pic">
-    <img src="library/img/patrick-hanus-illustration.png" alt="Patrick Hanus is Attractive">
+    <img src="{{ site.url }}/library/img/patrick-hanus-illustration.png" alt="Patrick Hanus is Attractive">
 </section>
 
 <section class="bio">
@@ -13,13 +13,13 @@
 
 <section id="Social Media">
     <ul>
-        <li><i class="fa fa-vimeo" aria-hidden="true"></i>Watch videos and animations I've made on <a href="https://bit.ly/ph-vimeo">Vimeo.</a></li>
-        <li><i class="fa fa-twitter" aria-hidden="true"></i>Read cool articles, funny thoughts and new projects on <a href="https://bit.ly/ph-twitter">Twitter</a></li>
-        <li><i class="fa fa-github" aria-hidden="true"></i>Take a look at my code projects on <a href="https://bit.ly/ph-github">Github</a></li>
-        <li><i class="fa fa-instagram" aria-hidden="true"></i>See pictures of real life and doodles for <a href="https://bit.ly/ph-insta">Instagram</a></li>
-        <li><i class="fa fa-spotify" aria-hidden="true"></i>Listen to the latest playlist on <a href="https://bit.ly/ph-spotify">Spotify</a></li>
-        <li><i class="fa fa-linkedin" aria-hidden="true"></i>Send me an awkward connection request on <a href="https://bit.ly/ph-LinkedIn">LinkedIn</a></li>
-        <li><i class="fa fa-dribbble" aria-hidden="true"></i>Please invite me to upload work at <a href="https://bit.ly/ph-dribbble">Dribbble</a></li>
+        <li><i class="fa fa-vimeo" aria-hidden="true"></i>Watch videos and animations I've made on <a class="underline" href="https://bit.ly/ph-vimeo">Vimeo.</a></li>
+        <li><i class="fa fa-twitter" aria-hidden="true"></i>Read cool articles, funny thoughts and new projects on <a class="underline" href="https://bit.ly/ph-twitter">Twitter</a></li>
+        <li><i class="fa fa-github" aria-hidden="true"></i>Take a look at my code projects on <a class="underline" href="https://bit.ly/ph-github">Github</a></li>
+        <li><i class="fa fa-instagram" aria-hidden="true"></i>See pictures of real life and doodles for <a class="underline" href="https://bit.ly/ph-insta">Instagram</a></li>
+        <li><i class="fa fa-spotify" aria-hidden="true"></i>Listen to the latest playlist on <a class="underline" href="https://bit.ly/ph-spotify">Spotify</a></li>
+        <li><i class="fa fa-linkedin" aria-hidden="true"></i>Send me an awkward connection request on <a class="underline" href="https://bit.ly/ph-LinkedIn">LinkedIn</a></li>
+        <li><i class="fa fa-dribbble" aria-hidden="true"></i>Please invite me to upload work at <a class="underline" href="https://bit.ly/ph-dribbble">Dribbble</a></li>
     </ul>
 </section>
 
