--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,11 +19,11 @@
         <meta property="og:url" content="http://patrickhanus.com" />
         <meta property="og:image" content="http://patrickhanus.com/img/patrick-hanus-illustration.png" />
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <link rel="stylesheet" href="style.css">
-        <script src="library/js/vendor/modernizr-2.8.3.min.js"></script>
+        <link rel="apple-touch-icon" href="{{ site.url }}/apple-touch-icon.png">
+        <link rel="stylesheet" href="{{ site.url }}/css/style.css">
+        <script src="{{ site.url }}/library/js/vendor/modernizr-2.8.3.min.js"></script>
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+        <script>window.jQuery || document.write('<script src="{{ site.url }}/js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
         <script type="application/ld+json">
             {
               "@context": "http://schema.org",
@@ -66,7 +66,7 @@
         <ul>
           {% for link in site.links %}
             <li>
-              <a href="{{ site.url }}{{ link.url }}">{{ link.title }}</a>
+              <a class="nav-button" href="{{ site.url }}{{ link.url }}">{{ link.title }}</a>
             </li>
           {% endfor %}
         </ul>
