--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -15,6 +15,19 @@ body {
 	padding-right: 5px;
 }
 
+nav ul li {
+	display: inline-block;
+}
+
+a.nav-button {
+	padding: 10px;
+	border: 1px solid #B4E33D;
+	border-radius: 5px;
+	color: gray;
+	background: #D7F4DC;
+	margin: 20px 0;
+}
+
 content {
 	display: block;
 	width: 50%;
@@ -94,6 +107,18 @@ aside {
 	color: gray;
 	background: #D7F4DC;
 	margin: 20px 0;
+}
+
+blockquote {
+		float: left;
+		width: 100%;
+		display: block;
+		padding: 10px;
+		border: 1px solid #c6c6c6;
+		border-radius: 5px;
+		background: #f6f6f6;
+		margin: 20px 0px;
+		box-shadow: 0px 20px 50px #d6d6d6;
 }
 
 /* Mobile Styles */
