--- a/_sass/_modules/_typography.scss
+++ b/_sass/_modules/_typography.scss
@@ -8,20 +8,33 @@ h1 {
 
 }
 
-a {
+.underline {
 	display: inline-block;
 	color: #c6c6c6;
 	text-decoration: none;
 	border-bottom: 1px solid #c6c6c6;
 	transition: 0.2s;
-}
 
-a:hover {
-	color: #75caca;
-	transition: 0.5s;
-	border-bottom: 1px solid #75caca;
+	&:hover {
+		color: #75caca;
+		transition: 0.5s;
+		border-bottom: 1px solid #75caca;
+	}
 }
 
 p {
 	margin-top: 0px;
+}
+
+nav ul li {
+	display: inline-block;
+}
+
+nav a.nav-button {
+	padding: 10px;
+	border: 1px solid #B4E33D;
+	border-radius: 5px;
+	color: gray;
+	background: #D7F4DC;
+	margin: 20px 0;
 }
