--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -10,42 +10,51 @@ body {
 	line-height: 26px;
 }
 
-.fa {
-	color: #c6c6c6;
-	padding-right: 5px;
-}
-
-nav ul li {
-	display: inline-block;
-}
-
-a.nav-button {
-	padding: 10px;
-	border: 1px solid #B4E33D;
-	border-radius: 5px;
-	color: gray;
-	background: #D7F4DC;
+nav ul {
+	text-align: center;
 	margin: 20px 0;
+
+	li {
+		display: inline-block;
+	}
+}
+
+.page-header {
+	position: relative;
+	margin-top: 0px;
+	height: 60px;
+	overflow: hidden;
+
+	img {
+		position: absolute;
+		top: 0px;
+		margin-top: 0;
+	}
+}
+
+header {
+	width: 50%;
+	margin: 0px auto;
 }
 
 content {
 	display: block;
-	width: 50%;
 	margin: 0px auto;
 	position: relative;
 	padding-bottom: 80px;
+	width: 50%;
 }
 
 section {
 	float: left;
 	width: 100%;
 	display: block;
-	padding: 10px;
-	border: 1px solid #c6c6c6;
+	padding: 20px;
+	border: 1px solid $gray;
 	border-radius: 5px;
-	background: #f6f6f6;
+	background: lighten(#f6f6f6, 1%);
 	margin: 20px 0px;
-	box-shadow: 0px 20px 50px #d6d6d6;
+	//box-shadow: 0px 20px 50px #d6d6d6;
 }
 
 .bio {
@@ -70,20 +79,22 @@ ul {
 	margin: 0;
 }
 
+
 footer {
 	position: absolute;
 	bottom: 0;
 	clear: both;
 	width: 100%;
-}
 
-footer p {
-	display: block;
-	font-size: 10px;
-}
+	p {
+		display: block;
+		font-size: 10px;
+	}
 
-footer .fa {
-	color: red;
+	.fa {
+		color: red;
+	}
+	
 }
 
 aside {
@@ -100,25 +111,16 @@ aside {
 	float: right;
 }
 
-.callout {
-	padding: 10px;
-	border: 1px solid #B4E33D;
-	border-radius: 5px;
-	color: gray;
-	background: #D7F4DC;
-	margin: 20px 0;
-}
-
 blockquote {
-		float: left;
-		width: 100%;
-		display: block;
-		padding: 10px;
-		border: 1px solid #c6c6c6;
-		border-radius: 5px;
-		background: #f6f6f6;
-		margin: 20px 0px;
-		box-shadow: 0px 20px 50px #d6d6d6;
+	float: left;
+	width: 100%;
+	display: block;
+	padding: 10px;
+	border: 1px solid $gray;
+	border-radius: 5px;
+	background: #f6f6f6;
+	margin: 40px 0px;
+	box-shadow: 0px 20px 50px #d6d6d6;
 }
 
 /* Mobile Styles */
