--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,16 +11,16 @@
         <meta name="twitter:site" content="@thehsedition">
         <meta name="twitter:creator" content="@thehsedition">
         <meta name="twitter:title" content="Patrick Hanus on the Web">
-        <meta name="twitter:description" content="The online portfolio and resources to learn things about Patrick Hanus, if you should be so inclined to learn such things. * Please note this is an ever-evolving project. *">
-        <meta name="twitter:image" content="http://patrickhanus.com/img/patrick-hanus-illustration.png">
+        <meta name="twitter:description" content="Hi, I'm Patrick Hanus, a designer and developer from New York, now living in Indianapolis for some reason.">
+        <meta name="twitter:image" content="{{ site.url }}/img/patrick-hanus-illustration.png">
     <!-- OG Tags -->
         <meta property="og:title" content="Patrick Hanus" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="http://patrickhanus.com" />
-        <meta property="og:image" content="http://patrickhanus.com/img/patrick-hanus-illustration.png" />
+        <meta property="og:url" content="{{ site.url }}" />
+        <meta property="og:image" content="{{ site.url }}/img/patrick-hanus-illustration.png" />
 
         <link rel="apple-touch-icon" href="{{ site.url }}/apple-touch-icon.png">
-        <link rel="stylesheet" href="{{ site.url }}/css/style.css">
+        <link rel="stylesheet" href="{{ site.url }}/style.css">
         <script src="{{ site.url }}/library/js/vendor/modernizr-2.8.3.min.js"></script>
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="{{ site.url }}/js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
@@ -30,7 +30,7 @@
               "@type": "Person",
               "name": "Patrick Hanus",
               "url": "http://patrickhanus.com",
-              "email": "hello@patrickhanus.com"
+              "email": "hello@patrickhanus.com",
               "logo": "http://patrickhanus.com/tile.png",
               "sameAs": [
                 "https://github.com/theHsEdition",
@@ -51,25 +51,3 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
-        <content class="clearfix">
-
-            <aside>
-                <a class="callout" href="https://paypal.me/PatrickHanus">Click Here to help me knock out my student debt!</a>
-            </aside>
-            
-            <header>
-    <h1>Patrick Hanus</h1>
-    <p>My online stuff, as it happens. (Not in real time.)</p>
-    
-    <nav id="navigation" role="navigation">
-        <ul>
-          {% for link in site.links %}
-            <li>
-              <a class="nav-button" href="{{ site.url }}{{ link.url }}">{{ link.title }}</a>
-            </li>
-          {% endfor %}
-        </ul>
-    </nav>
-    
-</header>
