--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,4 +1,25 @@
 {% include header.html %}
+<div class="page-header">
+  <img src="{{ site.url }}{{ page.img }}" alt="{{ page.categories }}">
+</div>
+
+<header>
+
+    <nav id="navigation" role="navigation">
+        <ul>
+          {% for link in site.links %}
+            <li>
+              <a class="nav-button" href="{{ site.url }}{{ link.url }}">{{ link.title }}</a>
+            </li>
+          {% endfor %}
+        </ul>
+    </nav>
+
+    <h1>{{ page.title }}</h1>
+    <p>{{ page.subtitle }}</p>
+</header>
+
+<content class="clearfix">
 
 {{ content }}
 
