--- a/style.scss
+++ b/style.scss
@@ -1,17 +1,20 @@
+---
+---
+
 /* Main Stylesheet */
 
 // Resets
 @import "_reset/main";
 @import "_reset/normalize";
 
-// Responsive Grid System
-@import "_modules/grid";
-
-// base stylesheet
-@import "base";
-
 // Header Styling
 @import "_modules/typography";
 
 // Button Styling
 @import "_modules/buttons";
+
+// Responsive Grid System
+@import "_modules/grid";
+
+// base stylesheet
+@import "base";
