New pages and layout changes
- Added a Projects page
- Added a Lists page
- Changed the way blog posts show up
- Made edits to the about page
- Added new styles for page header image
- Added Styles for horizontal rules
- Changed nav button styles
- Added a new project file for RESOURCE
- Added font awesome support (Again)
- Added a new section at the bottom for social media

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,23 @@
+<section id="socialIcons" itemscope itemtype="http://schema.org/Person">
+        <meta itemprop="url" content="http://patrickhanus.com">
+        
+        <a href="https://bit.ly/ph-vimeo" rel="me" itemprop="sameAs"><i class="fa fa-vimeo" aria-label="Link to my vimeo channel" aria-hidden="true" title="Vimeo"></i></a>
+        
+        <a href="https://bit.ly/ph-twitter" rel="me" itemprop="sameAs"><i class="fa fa-twitter" aria-label="Link to my twitter account" aria-hidden="true" title="Twitter"></i></a>
+        
+        <a href="https://bit.ly/ph-github" rel="me" itemprop="sameAs"><i class="fa fa-github" aria-label="Link to the code in my Github Account" aria-hidden="true" title="GitHub"></i></a>
+        
+        <a href="https://bit.ly/ph-insta" rel="me" itemprop="sameAs"><i class="fa fa-instagram" aria-hidden="true" aria-label="Link to my pictures on Instagram" title="Instagram"></i></a>
+        
+        <a href="https://bit.ly/ph-spotify" rel="me" itemprop="sameAs"><i class="fa fa-spotify" aria-hidden="true" aria-label="Link to my music playlists on Spotify" title="Spotify"></i></a>
+        
+        <a href="https://bit.ly/ph-LinkedIn" rel="me" itemprop="sameAs"><i class="fa fa-linkedin" aria-hidden="true" aria-label="Link to my LinkedIn Profile" title="LinkedIn"></i></a>
+       
+        <a href="https://bit.ly/ph-dribbble" rel="me" itemprop="sameAs"><i class="fa fa-dribbble" aria-hidden="true" aria-label="Link to my account on Dribbble" title="Dribbble"></i></a>
+
+        <a href="https://bit.ly/ph-flickr" rel="me" itemprop="sameAs"><i class="fa fa-flickr" aria-hidden="true" aria-label="Link to more photos on flickr" title="Flickr"></i></a>
+</section>
+
 <footer>
         <p class="left">&copy;2017 Patrick Hanus Ltd.</p>
         <p class="right">I&nbsp;&nbsp;&nbsp;<i class="fa fa-heart" aria-hidden="true"></i>You.</p>
