--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,8 +25,8 @@
     <section class="bio">
         <h2>Hey There,</h2>
         <p>I’m Patrick Hanus. Intros are always kind of rough so I’m going to try and sound as natural as possible. I built this website because my wife wanted me to get a job and stop “lying around."</p>
-        <p>I love good design, I like learning new programs and trying to figure out what I’m doing wrong. <a class="underline" href="http://skymousestudios.com">I started a company</a> with my best friend, because I want to help people kill their old websites and build better ones! I want to make enough money to write a television show that makes JJ Abrams jealous. (In a non-threatening way.)</p>
-        <p>Get in touch, shoot the breeze or send me spam at:<a class="underline" href="mailto:hello@patrickhanus.com">hello@patrickhanus.com</a></p>
+        <p>I love good design, I like learning new programs and trying to figure out what I’m doing wrong. <a title="Go to The Skymouse Studios Website" class="underline" href="http://skymousestudios.com">I started a company</a> with my best friend, because I want to help people kill their old websites and build better ones! I want to make enough money to write a television show that makes JJ Abrams jealous. (In a non-threatening way.)</p>
+        <p>You can get in touch, shoot the breeze or send me spam at: <a title="Email Patrick Hanus" class="underline" href="mailto:hello@patrickhanus.com">hello@patrickhanus.com</a></p>
     </section>
 
     <section>
@@ -45,7 +45,7 @@
         <p>"Smoking is bad for you" - An exhilarating picture book by me</p>
     </section>
 
-    <section id="Social Media" itemtype="http://schema.org/Person">
+    <section id="Social Media" itemscope itemtype="http://schema.org/Person">
         <h2>Other things around the web:</h2>
         <meta itemprop="url" content="http://patrickhanus.com">
         
