--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,6 @@
 {% include header.html %}
 <div class="page-header">
-  <img src="{{ site.url }}{{ page.img }}" alt="{{ page.categories }}">
+  <img src="{{ site.url }}/library/img/{{ page.img }}" alt="{{ page.categories }}">
 </div>
 
 <header>
