--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -6,12 +6,12 @@
 
 body {
 	font-family: 'Passion One', cursive;
-	font-family: 'Roboto Slab', serif;
+	font-family: 'Roboto Slab', sans-serif;
 	line-height: 26px;
+	color: $black;
 }
 
 nav ul {
-	text-align: center;
 	margin: 20px 0;
 
 	li {
@@ -22,7 +22,7 @@ nav ul {
 .page-header {
 	position: relative;
 	margin-top: 0px;
-	height: 60px;
+	height: 100px;
 	overflow: hidden;
 
 	img {
@@ -41,7 +41,7 @@ content {
 	display: block;
 	margin: 0px auto;
 	position: relative;
-	padding-bottom: 80px;
+	padding-bottom: 40px;
 	width: 50%;
 }
 
@@ -79,6 +79,20 @@ ul {
 	margin: 0;
 }
 
+.fa {
+	&:hover {
+		color: $blue;
+	}
+}
+
+#socialIcons {
+	text-align: center;
+	background: white;
+	.fa {
+		font-size: 1.5em;
+		margin: 0 10px;
+	}
+}
 
 footer {
 	position: absolute;
@@ -91,8 +105,16 @@ footer {
 		font-size: 10px;
 	}
 
+	a {
+		text-decoration: none;
+	}
+
 	.fa {
 		color: red;
+
+		&:hover {
+			color: $blue;
+		}
 	}
 	
 }
@@ -123,6 +145,13 @@ blockquote {
 	box-shadow: 0px 20px 50px #d6d6d6;
 }
 
+hr {
+	margin: 40px 0;
+	border-top: 1px solid $gray;
+	border-bottom: 1px solid $gray;
+	border-radius: 2px;
+}
+
 /* Mobile Styles */
 
 @media (max-width: 1000px) {
@@ -136,6 +165,33 @@ blockquote {
 }
 
 @media (max-width: 600px) {
+	h1 {
+		font-size: 4em;
+	}
+
+	header {
+		width: 95%;
+	}
+
+	nav {
+
+		ul {
+			
+			li {
+				margin: 2px 0;
+				//display: block;
+				//width: 50%;
+			}
+		}
+	}
+
+	a.nav-button {
+		padding: 12px;
+		margin: 0;
+		display: block;
+
+	}
+
 	content {
 		width: 95%;
 	}
