--- a/_sass/_modules/_typography.scss
+++ b/_sass/_modules/_typography.scss
@@ -8,11 +8,11 @@ $blue:		#75caca;
 
 h1 {
 	font-family: 'Passion One';
-	font-size: 100px;
+	font-size: 5em;
 	font-weight: 400;
 	margin-top: 20px;
 	margin-bottom: 5px;
-	line-height: 80px;
+	line-height: 1em;
 	color: $black;
 	text-shadow: 4px 3px 0 white, 9px 8px 0 rgba(0,0,0,0.15);
 }
@@ -23,6 +23,7 @@ h2 {
 	font-size: 30px;
 	font-weight: 100;
 	margin: 0px;
+	margin-bottom: 5px;
 	line-height: 40px;
 }
 
@@ -41,6 +42,20 @@ a {
 .fa {
 	color: $gray;
 	padding-right: 5px;
+}
+
+em {
+	font-weight: 800;
+    font-style: normal;
+    background-color: #c8ff29;
+    border: 1px solid #cfcfcf;
+    border-radius: 4px;
+}
+
+pre {
+	background-color: $gray;
+	padding: 10px;
+	border-radius: 4px;
 }
 
 .underline {
@@ -66,6 +81,10 @@ a {
 	margin: 0 10px;
 	text-decoration: none;
 	transition: 0.5s;
+
+	&:first-child {
+		margin-left: 0;
+	}
 
 	&:hover {
 		color: $green;
