--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
         <link rel="stylesheet" href="{{ site.url }}/style.css">
         <script src="{{ site.url }}/library/js/vendor/modernizr-2.8.3.min.js"></script>
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <link rel="stylesheet" href="library/fonts/font-awesome.min.css">
+        <link rel="stylesheet" href="{{ site.url }}/library/fonts/font-awesome.min.css">
 
 
         <script>window.jQuery || document.write('<script src="{{ site.url }}/js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
