--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,6 @@
 {% include header.html %}
 <div class="page-header">
-  <h2>Don't Give Up. Life Gets Better.</h2>
+  <h2>{{ page.hidden-message }}</h2>
 </div>
 
 <header>
