--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,27 +4,26 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Patrick Hanus | {{ page.title }}</title>
-        <meta name="description" content="The online portfolio and resources to learn things about Patrick Hanus, if you should be so inclined to learn such things. * Please note this is an ever-evolving project. *">
+        <meta name="description" content="{{ page.seo-description }}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Twitter Card -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@thehsedition">
         <meta name="twitter:creator" content="@thehsedition">
-        <meta name="twitter:title" content="Patrick Hanus on the Web">
-        <meta name="twitter:description" content="Hi, I'm Patrick Hanus, a designer and developer from New York, now living in Indianapolis for some reason.">
-        <meta name="twitter:image" content="{{ site.url }}/img/patrick-hanus-illustration.png">
+        <meta name="twitter:title" content="{{ page.seo-title }}">
+        <meta name="twitter:description" content="{{ page.seo-description }}">
+        <meta name="twitter:image" content="{{ site.url }}/library/img/{{ page.seo-title }}">
     <!-- OG Tags -->
-        <meta property="og:title" content="Patrick Hanus" />
+        <meta property="og:title" content="{{ page.seo-title }}" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="{{ site.url }}" />
-        <meta property="og:image" content="{{ site.url }}/img/patrick-hanus-illustration.png" />
+        <meta property="og:image" content="{{ site.url }}/img/{{ page.seo-img }}" />
 
         <link rel="apple-touch-icon" href="{{ site.url }}/apple-touch-icon.png">
         <link rel="stylesheet" href="{{ site.url }}/style.css">
         <script src="{{ site.url }}/library/js/vendor/modernizr-2.8.3.min.js"></script>
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <link rel="stylesheet" href="{{ site.url }}/library/fonts/font-awesome.min.css">
-
 
         <script>window.jQuery || document.write('<script src="{{ site.url }}/js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
         <script type="application/ld+json">
@@ -44,7 +43,6 @@
                 "https://www.youtube.com/channel/UCe20ttCu0-xMuzfZB6hrQlw",
                 "https://www.instagram.com/thehsedition/",
                 "https://open.spotify.com/user/thehsedition"
-
               ]
             }
         </script>
