--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,9 +24,9 @@
 
     <section class="bio">
         <h2>Hey There,</h2>
-        <p>I’m Patrick Hanus. Intros are always kind of rough so I’m going to try and sound as natural as possible. I built this website because my wife wanted me to get a job and stop “lying around."</p>
+        <p>Hi I’m Patrick Hanus. Welcome to my space on the internet. Feel free to poke around, investigate and see what I've been working on lately.</p>
         <p>I love good design, I like learning new programs and trying to figure out what I’m doing wrong. <a title="Go to The Skymouse Studios Website" class="underline" href="http://skymousestudios.com">I started a company</a> with my best friend, because I want to help people kill their old websites and build better ones! I want to make enough money to write a television show that makes JJ Abrams jealous. (In a non-threatening way.)</p>
-        <p>You can get in touch, shoot the breeze or send me spam at: <a title="Email Patrick Hanus" class="underline" href="mailto:hello@patrickhanus.com">hello@patrickhanus.com</a></p>
+        <p>I like meeting new people and getting things done with others. You can get in touch, shoot the breeze or send me spam at: <a title="Email Patrick Hanus" class="underline" href="mailto:hello@patrickhanus.com">hello@patrickhanus.com</a></p>
     </section>
 
     <section>
