--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,10 @@
 
 {% include header.html %}
 
+<div class="page-header">
+  <h2>{{ page.hidden-message }}</h2>
+</div>
+
 <header>
     <h1>Patrick Hanus</h1>
     <p>{{ subtitle }}</p>
