--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,18 +20,26 @@
     </nav>
 </header>
 
-<content class="clearfix">
+<img class="artwork-left" src="{{ site.url }}/library/img/artwork_left.svg" alt="">
 
-    <section class="profile-pic">
-        <img src="{{ site.url }}/library/img/patrick-hanus-illustration.png" alt="Patrick Hanus is Attractive">
-    </section>
+<img class="artwork-right" src="{{ site.url }}/library/img/artwork_right.svg" alt="">
 
-    <section class="bio">
-        <h2>Hey There,</h2>
-        <p>Hi I’m Patrick Hanus. Welcome to my space on the internet. Feel free to poke around, investigate and see what I've been working on lately.</p>
-        <p>I love good design, I like learning new programs and trying to figure out what I’m doing wrong. <a title="Go to The Skymouse Studios Website" class="underline" href="http://skymousestudios.com">I started a company</a> with my best friend, because I want to help people kill their old websites and build better ones! I want to make enough money to write a television show that makes JJ Abrams jealous. (In a non-threatening way.)</p>
-        <p>I like meeting new people and getting things done with others. You can get in touch, shoot the breeze or send me spam at: <a title="Email Patrick Hanus" class="underline" href="mailto:hello@patrickhanus.com">hello@patrickhanus.com</a></p>
-    </section>
+<content>
+
+
+    <div class="intro-grid">
+        <section class="one">
+            <img src="{{ site.url }}/library/img/patrick-hanus-illustration.png" alt="Patrick Hanus is Attractive">
+        </section>            
+
+        <section class="two">
+                <h2>Hey There,</h2>
+                <p>Hi I’m Patrick Hanus. Welcome to my space on the internet. Feel free to poke around, investigate and see what I've been working on lately.</p>
+                <p>I love good design, I like learning new programs and trying to figure out what I’m doing wrong. <a title="Go to The Skymouse Studios Website" class="underline" href="http://skymousestudios.com">I started a company</a> with my best friend, because I want to help people kill their old websites and build better ones! I want to make enough money to write a television show that makes JJ Abrams jealous. (In a non-threatening way.)</p>
+                <p>I like meeting new people and getting things done with others. You can get in touch, shoot the breeze or send me spam at: <a title="Email Patrick Hanus" class="underline" href="mailto:hello@patrickhanus.com">hello@patrickhanus.com</a></p>            
+        </section>
+    </div>
+    
 
     <section>
         <h2>Places I’ve been in the past year:</h2>
