Final Tweaks to Dark Mode

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -48,7 +48,7 @@
         </script>
         <link href="https://fonts.googleapis.com/css?family=Passion+One:400|Roboto+Slab:300" rel="stylesheet">
     </head>
-    <body class="dark">
+    <body>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
