--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,6 +13,8 @@
             </li>
           {% endfor %}
         </ul>
+
+        <div id="DarkMode" onclick="darkMode()">Dark Mode</div>
     </nav>
 
     <h1>{{ page.title }}</h1>
