--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,8 +25,8 @@
 
 </content>
         
-<script src="{{ site.url }}/library/js/plugins.js"></script>
-<script src="{{ site.url }}/library/js/main.js"></script>
+<script src="{{ site.baseurl }}/library/js/plugins.js"></script>
+<script src="{{ site.baseurl }}/library/js/main.js"></script>
 
 <!-- Google Analytics -->
 <script>
