--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,31 +1,47 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang=""> 
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Patrick Hanus | {{ page.title }}</title>
         <meta name="description" content="{{ page.seo-description }}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+        <meta http-equiv="Pragma" content="no-cache" />
+        <meta http-equiv="Expires" content="0" />
+
     <!-- Twitter Card -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@thehsedition">
         <meta name="twitter:creator" content="@thehsedition">
         <meta name="twitter:title" content="{{ page.seo-title }}">
         <meta name="twitter:description" content="{{ page.seo-description }}">
-        <meta name="twitter:image" content="{{ site.url }}/library/img/{{ page.seo-title }}">
+        <meta name="twitter:image" content="{{ site.baseurl }}/library/img/{{ page.seo-title }}">
     <!-- OG Tags -->
         <meta property="og:title" content="{{ page.seo-title }}" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="{{ site.url }}" />
-        <meta property="og:image" content="{{ site.url }}/img/{{ page.seo-img }}" />
+        <meta property="og:url" content="{{ site.baseurl }}" />
+        <meta property="og:image" content="{{ site.baseurl }}/img/{{ page.seo-img }}" />
 
-        <link rel="apple-touch-icon" href="{{ site.url }}/apple-touch-icon.png">
-        <link rel="stylesheet" href="{{ site.url }}/style.css">
-        <script src="{{ site.url }}/library/js/vendor/modernizr-2.8.3.min.js"></script>
+        <link rel="apple-touch-icon" href="{{ site.baseurl }}/apple-touch-icon.png">
+        <link rel="stylesheet" href="{{ site.baseurl }}/style.css">
+        <script src="{{ site.baseurl }}/library/js/vendor/modernizr-2.8.3.min.js"></script>
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <link rel="stylesheet" href="{{ site.url }}/library/fonts/font-awesome.min.css">
+        <link rel="stylesheet" href="{{ site.baseurl }}/library/fonts/font-awesome.min.css">
 
-        <script>window.jQuery || document.write('<script src="{{ site.url }}/js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+        <script>window.jQuery || document.write('<script src="{{ site.baseurl }}/js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+
+        <!-- script for darkmode implementation -->
+        <script>
+            (function (window, document, undefined) {
+                'use strict';
+                if (!('localStorage' in window)) return;
+                var nightMode = localStorage.getItem('darkMode');
+                if (!nightMode) return;
+                document.documentElement.className += ' .dark';
+            })(window, document);
+        </script>
         <script type="application/ld+json">
             {
               "@context": "http://schema.org",
