--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,8 +36,8 @@
 
         <section class="two">
                 <h2>Hey There,</h2>
-                <p>Hi I’m Patrick Hanus. Welcome to my space on the internet. Feel free to poke around, investigate and see what I've been working on lately.</p>
-                <p>I love good design, I like learning new programs and trying to figure out what I’m doing wrong. <a title="Go to The Skymouse Studios Website" class="underline" href="http://skymousestudios.com">I started a company</a> with my best friend, because I want to help people kill their old websites and build better ones! I want to make enough money to write a television show that makes JJ Abrams jealous. (In a non-threatening way.)</p>
+                <p>Hi I’m Patrick Hanus.</p>
+                <p>I love good design, learning new programs and figuring out how to make things better. <a title="Go to The Skymouse Studios Website" class="underline" href="https://skymousestudios.com">I started a company</a> with my best friend, because I want to help people build better brands.</p>
                 <p>I like meeting new people and getting things done with others. You can get in touch, shoot the breeze or send me spam at: <a title="Email Patrick Hanus" class="underline" href="mailto:hello@patrickhanus.com">hello@patrickhanus.com</a></p>            
         </section>
     </div>
