--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -44,11 +44,11 @@
     
 
     <section>
-        <h2>Places I’ve been in the past year:</h2>
-        <p>Cold Cooperstown, NY</p>
-        <p>Inspiring Indianapolis, IN</p>
-        <p>Proud Pittsburgh, PA</p>
-        <p>Boisterous Boston, MA</p>
+        <h2>Places I’ve been in 2019:</h2>
+        <p>Nashville, TN</p>
+        <p>New York, NY</p>
+        <p>Kitty Hawk, NC</p>
+        <p>Cincinnati, OH</p>
     </section>
 
     <section>
@@ -74,8 +74,6 @@
         <p><i class="fa fa-spotify" aria-hidden="true"></i>Listen to the latest playlist on <a class="underline" href="https://bit.ly/ph-spotify">Spotify</a></p>
         
         <p><i class="fa fa-linkedin" aria-hidden="true"></i>Send me an awkward connection request on <a class="underline" href="https://bit.ly/ph-LinkedIn" rel="me" itemprop="sameAs">LinkedIn</a></p>
-       
-        <p><i class="fa fa-dribbble" aria-hidden="true"></i>Please invite me to upload work at <a class="underline" href="https://bit.ly/ph-dribbble" rel="me" itemprop="sameAs">Dribbble</a></p>
 
     </section>
 
