--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -249,17 +249,19 @@ footer {
 
 blockquote {
 	font-size: 1.5em;
-	text-align: center;
 	line-height: 2em;
 	float: left;
-	width: 150%;
 	display: block;
-	padding: 40px;
+	padding: 20px 40px;
 	border: 1px solid $gray;
 	border-radius: 5px;
 	background: #f6f6f6;
-	margin: 40px 0px 40px -25%;
+	margin: 40px 0px;
 	box-shadow: 0px 20px 50px #d6d6d6;
+
+	p {
+		margin: 0px;
+	}
 }
 
 hr {
