--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,12 +47,12 @@
               "@context": "http://schema.org",
               "@type": "Person",
               "name": "Patrick Hanus",
-              "url": "http://patrickhanus.com",
+              "url": "https://patrickhanus.com",
               "email": "hello@patrickhanus.com",
-              "logo": "http://patrickhanus.com/tile.png",
+              "logo": "https://patrickhanus.com/tile.png",
               "sameAs": [
                 "https://github.com/theHsEdition",
-                "https://twitter.com/theHsEdition",
+                "https://twitter.com/thepatrickhanus",
                 "https://www.linkedin.com/in/phanus",
                 "https://dribbble.com/thehsedition",
                 "https://vimeo.com/phanus",
