--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -49,6 +49,8 @@
         <p>New York, NY</p>
         <p>Kitty Hawk, NC</p>
         <p>Cincinnati, OH</p>
+        <p>Charleston, SC</p>
+        <p>Washington, DC</p>
     </section>
 
     <section>
@@ -61,11 +63,11 @@
 
     <section id="Social Media" itemscope itemtype="http://schema.org/Person">
         <h2>Other things around the web:</h2>
-        <meta itemprop="url" content="http://patrickhanus.com">
+        <meta itemprop="url" content="https://patrickhanus.com">
         
         <p><i class="fa fa-vimeo" aria-hidden="true"></i>Watch videos and animations I've made on <a class="underline" href="https://bit.ly/ph-vimeo" rel="me" itemprop="sameAs">Vimeo.</a></p>
         
-        <p><i class="fa fa-twitter" aria-hidden="true"></i>Read cool articles, funny thoughts and new projects on <a class="underline" href="https://bit.ly/ph-twitter" rel="me" itemprop="sameAs">Twitter</a></p>
+        <p><i class="fa fa-twitter" aria-hidden="true"></i>Read cool articles, funny thoughts and new projects on <a class="underline" href="https://twitter.com/thePatrickHanus" rel="me" itemprop="sameAs">Twitter</a></p>
         
         <p><i class="fa fa-github" aria-hidden="true"></i>Take a look at my code projects on <a class="underline" href="https://bit.ly/ph-github">Github</a></p>
         
